--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Default ignored files
 /shelf/
-/workspace.xml
+/.idea/workspace.xml
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -35,7 +35,7 @@
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
  .idea/artifacts
- .idea/compiler.xml
+ compiler.xml
  .idea/jarRepositories.xml
  .idea/modules.xml
  .idea/*.iml
@@ -81,3 +81,4 @@ fabric.properties
 
 #remove target folder
 /target/
+/.idea/
