--- a/jpa-entities/pom.xml
+++ b/jpa-entities/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.example</groupId>
         <artifactId>maven-multi-module</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>jpa-entities</artifactId>
