--- a/web-app/pom.xml
+++ b/web-app/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>maven-multi-module</artifactId>
         <groupId>org.example</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>converters</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
